--- a/Setup/website/index.html
+++ b/Setup/website/index.html
@@ -1,30 +1,17 @@
+<!DOCTYPE html>
 <html>
-<title># AGISIT LABS #</title>
-
-<!--
-http://stackoverflow.com/questions/22223270/vertically-and-horizontally-center-a-div-with-css
-http://css-tricks.com/centering-in-the-unknown/
-http://jsfiddle.net/6PaXB/
--->
-
-<style>.block {text-align: center;margin-bottom:10px;}.block:before {content: '';display: inline-block;height: 100%;vertical-align: middle;margin-right: -0.25em;}.centered {display: inline-block;vertical-align: middle;width: 300px;}</style>
-
-<body>
-<div class="block" style="height: 99%;">
-    <div class="centered">
-        <h1>AGISIT LAB 2019</h1>
-        <br />
-        <pre>
-  ------------------------
-                   \   ^__^
-                          \  (**)\_______
-                             (__)\       )\/\
-                              U  ||----w |
-                                 ||     ||
-
-
-        </pre>
-    </div>
-</div>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Scoreborad</title>
+    </head>
+    <body>
+        <div style="text-align: center">
+            <h1 style="color: olivedrab">Login Scoreboard</h1>
+            <form action="login.php" method="POST">
+                <input type="text" name="user" placeholder="Username" id="user" required>
+                <input type="password" name="password" placeholder="Password" id="password" required>
+                <p><input type="submit" value="Login">
+            </form>
+        </div>
+    </body>
 </html>
