--- a/Setup/website/index.html
+++ b/Setup/website/index.html
@@ -8,7 +8,7 @@
         <div style="text-align: center">
             <h1 style="color: olivedrab">Login Scoreboard</h1>
             <form action="login.php" method="POST">
-                <input type="text" name="user" placeholder="Username" id="user" required>
+                <input type="text" name="username" placeholder="Username" id="username" required>
                 <input type="password" name="password" placeholder="Password" id="password" required>
                 <p><input type="submit" value="Login">
             </form>
