--- a/Setup/website/html/index.html
+++ b/Setup/website/html/index.html
@@ -10,7 +10,12 @@
             <form action="login.php" method="POST">
                 <input type="text" name="username" placeholder="Username" id="username" required>
                 <input type="password" name="password" placeholder="Password" id="password" required>
-                <p><input type="submit" value="Login">
+                <p><input type="submit" value="Login"></p>
+            </form>
+            <form action="register.php" method="POST">
+                <input type="text" name="username" placeholder="Username" id="username" required>
+                <input type="password" name="password" placeholder="Password" id="password" required>
+                <p><input type="submit" value="Register"></p>
             </form>
         </div>
     </body>
